# api-blog-bkp

./: Cargo.toml  Procfile  docker-compose.yml  openapi.json
migrations/2023-09-16-021142_category/: up.sql
migrations/2023-09-17-131516_post/: down.sql  up.sql
migrations/2023-10-31-191852_ads/: down.sql  up.sql
migrations/2023-11-01-001512_files/: down.sql  up.sql
migrations/2023-11-04-131714_settings/: up.sql
migrations/2023-11-07-215125_matters/: down.sql  up.sql
src/: main.rs  mid.rs  s3.rs  schema.rs
src/auth/: mod.rs
src/controller/: ads.rs  category.rs  controller_lead.rs  files.rs  matters.rs  mod.rs  post.rs  settings.rs
src/models/: mod.rs  models.rs  new_models.rs
src/repository/: ads.rs  cotegory.rs  files.rs  matters.rs  mod.rs  post.rs  settings.rs
