[package]
name = "stw-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.scripts]
build-release = "cargo run --release"



[dependencies]

#ASYNC
tokio = { version = "1.32.0", features = ["full"] }
tokio-diesel = {git = "https://github.com/SrJohnathan/tokio-diesel"  }

#DATABASE
diesel = { version = "2.1.0", features = ["postgres","r2d2", "uuid", "chrono","serde_json"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

#JSON
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"



#ROCKET_SERVER_HTTP
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_okapi = { version = "0.8.0-rc.3", features = [ "rapidoc","swagger"] }
schemars = { version = "0.8.6", features = ["preserve_order","chrono","derive","enumset","bytes"] }
rocket-multipart-form-data = "0.10.6"

#CLIENT_HTTP
reqwest = { version = "0.11" , features = [ "json" ]}


#S3
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"

#UTILL
base64 = "*"
regex = "1.7.1"
futures = "0.3.15"
dotenvy = "0.15"
multipart = "*"
chrono = {version = "0.4.31",features = ["serde"]}
serde_urlencoded = "0.7"